// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros as key: as key 1`] = `

import { $ } from '../ref.macro';

const state = { [ $( 'foo' ) ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

import { $ } from '../ref.macro';

const state = { [$('foo')]: true };

`;

exports[`macros with args: with args 1`] = `

import { $ } from '../ref.macro';

const foo = $( 'bar' ) ;

      ↓ ↓ ↓ ↓ ↓ ↓

import { $ } from '../ref.macro';

const foo = $('bar');

`;

exports[`macros with inject: with inject 1`] = `

import { $ } from '../ref.macro';
import { inject } from '../inject.macro'

class FooComponent extends Template {
    @inject store;
}

const state = { [ $( 'foo' ) ]: true };

      ↓ ↓ ↓ ↓ ↓ ↓

import { $ } from '../ref.macro';


class FooComponent extends Template {
    get store() {
        return this.DI.resolve('store');
    }

}

const state = { [$('foo')]: true };

`;
